# mdlex

./: .gitignore  LICENSE  Makefile  mdlex.py  notes.md  pyproject.toml  readme.md
sample/: S01E01.md  S01E02.md  S01E03.md  S01E04.md  S01E05.md  S01E06.md  S01E07.md  S01E08.md  S01E09.md  S01E10.md  S01E11.md
src/mdlex/: __init__.py  __main__.py  core.py
tests/: test_core.py
